p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes-app3
  template:
    metadata:
      labels:
        app: hello-kubernetes-app3
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-app3
spec:
  selector:
    app: hello-kubernetes-app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
